# simple-storage

./: .gitignore  Cargo.toml  Dockerfile  README.MD  compose.yml
.devcontainer/: devcontainer.json
src/: database.rs  main.rs
