[package]
name = "simple-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = {version = "1.0.201", features = ["derive"]}
tokio = "1.37.0"
tower = "0.4.13"
tower-http = {version= "0.5.2", features = ["trace"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18",  features = ["std", "env-filter", "registry"] }
