[package]
name = "simple-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.7.5", features=["multipart"]}
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
tokio = "1.37.0"
tower = "0.4.13"
tower-http = {version= "0.5.2", features = ["trace"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18",  features = ["std", "env-filter", "registry"] }
